--- a/examples/notebooks/03_custom_unit_example.ipynb
+++ b/examples/notebooks/03_custom_unit_example.ipynb
@@ -1159,8 +1159,8 @@
    "source": [
     "# import the main World class and the load_scenario_folder functions from assume\n",
     "# import the function to load custom units\n",
-    "from assume import World, load_custom_units\n",
-    "from assume.scenario.loader_csv import load_scenario_folder\n",
+    "from assume import World\n",
+    "from assume.scenario.loader_csv import load_custom_units, load_scenario_folder\n",
     "\n",
     "# Set up logging\n",
     "log = logging.getLogger(__name__)\n",
